# field_solver

./: CMakeLists.txt  Makefile  README.md  field.cpp  field.h  plot  solver  solver.cpp
data/: aho.root
geometries/: bulkPix.json  bulkPix_short.json  bulkPix_weighting.json  bulkPix_weighting_short.json  capacitor.json  capacitor_die.json  double_tpc.json  double_tpc_5_80%.json  double_tpc_8_80%.json  double_tpc_conductor_cage.json  double_tpc_dielectric_cage.json  linear.json  linear_cond_defect.json  linear_diel_defect.json  linear_vn.json  sheet.json  test.json
include/: argParser.h  boundary.h  drift.h  drift_single.h  efield.h  field.h  geometry.h  induction.h  pad.h  path.h  physics.h  scalar_field.h  solver.h  utils.h  vector_field.h  volume.h
src/: argParser.cpp  boundary.cpp  drift.cxx  drift_single.cxx  edep.cxx  efield.cxx  field.cpp  field.tpp  geometry.cpp  induction.cxx  induction_single.cxx  pad.cpp  path.cpp  physics.cpp  scalar_field.cpp  scalar_field.tpp  solver.cpp  solver.cxx  utils.cpp  vector_field.cpp  volume.cpp
utils/: bulkPix.py  drift_path  edep  event_display  generate_bulkPix  generate_bulkPix_weighting  generate_partial_cage_tpc  make_current_grid  make_geometry  patch_current  plot  plot_paths  plot_paths_3D  plot_vectors  sample
